tests/compile-fail/Rule_7_4.rs
fn main() {
    let mut _l = "string literal";
    //~^ ERROR Non-compliant - string literal not const-qualified.
}
